--- a/milstone-10/Authentication/authentication-with-login-out/package.json
+++ b/milstone-10/Authentication/authentication-with-login-out/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carrear-hub",
+  "name": "authentication-with-login-out",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,7 +18,6 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
-    "recharts": "^2.8.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
